--- a/ilBelloDelleDonne2.0/.classpath
+++ b/ilBelloDelleDonne2.0/.classpath
@@ -37,5 +37,12 @@
 	<classpathentry kind="lib" path="libs/jboss-logging-annotations-1.2.0.Beta1.jar"/>
 	<classpathentry kind="lib" path="libs/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="libs/sqltool.jar"/>
+	<classpathentry kind="lib" path="libs/classmate-1.0.0.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-validator-5.1.3.Final.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-validator-annotation-processor-5.1.3.Final.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-validator-cdi-5.1.3.Final.jar"/>
+	<classpathentry kind="lib" path="libs/javax.el-2.2.4.jar"/>
+	<classpathentry kind="lib" path="libs/javax.el-api-2.2.4.jar"/>
+	<classpathentry kind="lib" path="libs/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
