--- a/ilBelloDelleDonne2.0/.classpath
+++ b/ilBelloDelleDonne2.0/.classpath
@@ -44,5 +44,7 @@
 	<classpathentry kind="lib" path="libs/javax.el-2.2.4.jar"/>
 	<classpathentry kind="lib" path="libs/javax.el-api-2.2.4.jar"/>
 	<classpathentry kind="lib" path="libs/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="libs/commons-io-1.3.jar"/>
+	<classpathentry kind="lib" path="libs/commons-fileupload-1.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
