--- a/ilBelloDelleDonne2.0/.classpath
+++ b/ilBelloDelleDonne2.0/.classpath
@@ -46,5 +46,6 @@
 	<classpathentry kind="lib" path="libs/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="lib" path="libs/commons-io-1.3.jar"/>
 	<classpathentry kind="lib" path="libs/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="libs/commons-pool-1.5.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
